[gd_scene load_steps=2 format=3 uid="uid://1hbj1uv66mu2"]

[ext_resource type="Script" uid="uid://bk6ddqslxx0iq" path="res://scripts/puyo_test_ui.gd" id="1_uboyj"]

[node name="PuyoTestUI" type="CanvasLayer"]
script = ExtResource("1_uboyj")

[node name="Button" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -142.0
offset_right = -20.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "start"

[node name="TestResetButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -412.0
offset_top = -142.0
offset_right = -314.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Reset"

[node name="ChainLengthLabel" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -742.0
offset_top = 327.0
offset_right = -458.0
offset_bottom = 369.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Last Chain length: 0"

[node name="ChainRecipieLabel" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -416.0
offset_top = 8.0
offset_right = -104.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="JunkTest" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -286.0
offset_right = -20.0
offset_bottom = -165.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "drop junk"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TestResetButton" to="." method="_on_test_reset_button_pressed"]
[connection signal="pressed" from="JunkTest" to="." method="_on_junk_test_pressed"]
